attempt to fix DT-1592, fix nav bug on IE11

--- a/less/theme.less
+++ b/less/theme.less
@@ -39,7 +39,122 @@
     }
 }
 
-.flex-item {
+// Nested Flexbox
+// --------------
+
+.flex-container-1,
+.flex-container-2 {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: space-between;
+    -ms-flex-line-pack: justify;
+    align-content: space-between;
+    -webkit-box-align: stretch;
+    -moz-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+}
+
+.flex-container-1 {
+    // Horizontal Flexbox on Desktop
+    @media only screen and (min-width: 770px) {
+        -webkit-box-direction: normal;
+        -moz-box-direction: normal;
+        -webkit-box-orient: horizontal;
+        -moz-box-orient: horizontal;
+        -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        // Flex items
+        .flex-container-1--item-1,
+        .flex-container-1--item-2 {
+            -webkit-align-self: flex-end;
+            -ms-flex-item-align: end;
+            align-self: flex-end;
+        }
+    }
+    // Vertical layout on Tablet and Mobile
+    @media only screen and (max-width: 770px) {
+        -webkit-box-direction: normal;
+        -moz-box-direction: normal;
+        -webkit-box-orient: vertical;
+        -moz-box-orient: vertical;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+}
+
+.flex-container-2 {
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 500px;
+    // Flex items
+    .flex-container-2--item-a,
+    .flex-container-2--item-b {
+        -webkit-align-self: auto;
+        -ms-flex-item-align: auto;
+        align-self: auto;
+    }
+    // Change items order for Tablet and Mobile
+    @media only screen and (max-width: 770px) {
+        .flex-container-2--item-a {
+            webkit-box-ordinal-group: 2;
+            -moz-box-ordinal-group: 2;
+            -webkit-order: 1;
+            -ms-flex-order: 1;
+            order: 1;
+            padding: 30px 0 0;
+            width: 100%;
+        }
+        .flex-container-2--item-b {
+            webkit-box-ordinal-group: 1;
+            -moz-box-ordinal-group: 1;
+            -webkit-order: 0;
+            -ms-flex-order: 0;
+            order: 0;
+            width: 100%;
+        }
+    }
+}
+
+// Flex Items
+// ----------
+
+.template-header--flex-item {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+}
+
+// Profile widget within flex-item-a
+
+.flex-container-2--item-a {
     .bk-profile {
         padding-left: 10%;
         position:relative;
@@ -56,120 +171,6 @@
             }
         }
     }
-}
-
-.flex-container,
-.flex-container-2 {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-direction: normal;
-    -moz-box-direction: normal;
-    -webkit-box-orient: horizontal;
-    -moz-box-orient: horizontal;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -moz-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-align-content: stretch;
-    -ms-flex-line-pack: stretch;
-    align-content: stretch;
-}
-
-// Flexbox for tablet and mobile
-
-@media only screen and (max-width: 770px) {
-    .flex-container-2 {
-        width: 100%;
-        .flex-item {
-            webkit-box-ordinal-group: 2;
-            -moz-box-ordinal-group: 2;
-            -webkit-order: 1;
-            -ms-flex-order: 1;
-            order: 1;
-            padding: 30px 0 0;
-            width: 100%;
-        }
-        .flex-item-two {
-            webkit-box-ordinal-group: 1;
-            -moz-box-ordinal-group: 1;
-            -webkit-order: 0;
-            -ms-flex-order: 0;
-            order: 0;
-            width: 100%;
-        }
-    }
-}
-
-// Flexbox for header on desktop
-
-@media only screen and (min-width: 770px) {
-    .flex-container {
-        -webkit-box-orient: horizontal;
-        -moz-box-orient: horizontal;
-        -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-        flex-direction: row;
-    }
-
-    .flex-container-2 {
-        -webkit-flex: 1;
-            -ms-flex: 1;
-                flex: 1;
-        -webkit-box-orient: vertical;
-        -moz-box-orient: vertical;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        min-width: 500px;
-
-        .flex-item {
-            -webkit-justify-content: flex-start;
-            justify-content: flex-start;
-        }
-
-        .flex-item-two {
-            webkit-box-ordinal-group: 1;
-            -moz-box-ordinal-group: 1;
-            -webkit-order: 0;
-            -ms-flex-order: 0;
-            order: 0;
-            -webkit-box-flex: 0;
-            -moz-box-flex: 0;
-            -webkit-flex: 0 1 auto;
-            -ms-flex: 0 1 auto;
-            flex: 0 1 auto;
-            -webkit-align-self: flex-end;
-            -ms-flex-item-align: flex-end;
-            align-self: flex-end;
-            -webkit-justify-content: flex-end;
-            justify-content: flex-end;
-        }
-
-    }
-
-    .flex-item {
-        -webkit-box-ordinal-group: 1;
-        -moz-box-ordinal-group: 1;
-        -webkit-order: 0;
-        -ms-flex-order: 0;
-        order: 0;
-        -webkit-box-flex: 0;
-        -moz-box-flex: 0;
-        -webkit-flex: 0 1 auto;
-        -ms-flex: 0 1 auto;
-        flex: 0 1 auto;
-        -webkit-align-self: flex-end;
-        -ms-flex-item-align: flex-end;
-        align-self: flex-end;
-    }
-
 }
 
 .brand {
